--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -291,7 +291,7 @@ Marca de Institución
 status open
 
 \begin_layout Plain Layout
-Luis, Antonio
+Nancy, Antonio
 \begin_inset Note Note
 status open
 
