--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -780,7 +780,11 @@ Documentos Actuales
 \end_layout
 
 \begin_layout Subsection
-Definiciones
+LINEAMIENTOS CURRICULARES
+\end_layout
+
+\begin_layout Standard
+
 \end_layout
 
 \begin_layout BeginFrame
