--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -673,7 +673,7 @@ La Geometria Sintética
 \end_layout
 
 \begin_layout BeginFrame
-Consideraciones 
+Geométria Sintética 
 \begin_inset Note Note
 status open
 
@@ -722,25 +722,11 @@ status open
 
 \end_inset
 
- CAMBIAR se hace necesario tratar con conceptos como extensiones de cuerpos,
- que nos habla de posibilidad (o no) de poder construir puntos a partir
- de otros puntos dados.
- Estos conceptos fueron principalmente obtenidos del libro 
-\begin_inset CommandInset citation
-LatexCommand citet
-key "hungerford1974algebra"
-
-\end_inset
-
-y 
-\begin_inset CommandInset citation
-LatexCommand citep
-key "stewart2004galois"
-
-\end_inset
-
-.
- Las cuales se presentarán sin demostración.
+ Durante más de dos siglos los ‘‘Elementos’’ de Euclides (330 - 275) fueron
+ el indiscutible libro de texto de las escuelas para la enseñanza de las
+ matemáticas.
+ Los mismos estaban divididos en trece libros, que contienen el material
+ correspondiente a la geometría elemental propiamente dicha.
 \end_layout
 
 \begin_layout Pause
@@ -758,7 +744,7 @@ status open
 
 \end_inset
 
-En 1899 Hilbert sustituyo la obra de Euclides.,
+ El sistema de Euclides no era logicamente perfecto
 \begin_inset ERT
 status open
 
@@ -769,22 +755,89 @@ status open
 
 \end_inset
 
-CAMBIAR contando que se conocen ya los conceptos de grupos, anillos y cuerpos,
- los cuales se mencionan en este trabajo, y fueron vistas en cursos de la
- carrera.
- Comenzaremos con una definición básica para lo subsiguiente.
+ Pues faltaban premisas que Euclides admitía sin enunciar explícitamente.
+ Lo cual obligaba a rehacer los fundamentos de la geometría.
+\end_layout
+
+\begin_layout BeginFrame
+
+\end_layout
+
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+ Entre los mas destacados 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+ Arquímides: Él amplio la lista de los postulados geométricos, y completo
+ la exposición de Euclides en la teoría de medición de longitudes, áreas
+ y volúmenes.
+ Mientras Euclides establece únicamente relaciones entre longitudes, áreas
+ y volúmenes, mostrando por ejemplo, que las áreas de los círculos son como
+ los cuadrados de los radios, y los volúmenes, de esferas como los cubos
+ de los radios, Arquímedes presenta expresiones que permiten calcular las
+ magnitudes correspondientes.
+ Este último introdujo cinco postulados, a fin de fundamentar la geometría
+ métrica.
+ (Pero no pueden considerarse como postulados, ya que pueden ser demostrados).
+ 
+\end_layout
+
+\begin_layout Block
+Lobachevski, 
+\end_layout
+
+\begin_layout Block
+Riemann; 
 \end_layout
 
 \begin_layout Section
 Documentos Actuales
 \end_layout
 
-\begin_layout Subsection
-LINEAMIENTOS CURRICULARES
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
 \end_layout
 
-\begin_layout Standard
+\end_inset
 
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+LINEAMIENTOS CURRICULARES
 \end_layout
 
 \begin_layout BeginFrame
