--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -733,7 +733,7 @@ status open
 
 \end_layout
 
-\begin_layout Block
+\begin_layout AlertBlock
 \begin_inset ERT
 status open
 
@@ -774,7 +774,7 @@ status open
 
 \end_inset
 
- Entre los mas destacados 
+ Entre los mas destacados está 
 \begin_inset ERT
 status open
 
@@ -785,14 +785,42 @@ status open
 
 \end_inset
 
- Arquímides: Él amplio la lista de los postulados geométricos, y completo
- la exposición de Euclides en la teoría de medición de longitudes, áreas
- y volúmenes.
- Mientras Euclides establece únicamente relaciones entre longitudes, áreas
- y volúmenes, mostrando por ejemplo, que las áreas de los círculos son como
- los cuadrados de los radios, y los volúmenes, de esferas como los cubos
- de los radios, Arquímedes presenta expresiones que permiten calcular las
- magnitudes correspondientes.
+ Arquímides.
+ El amplio la lista de los postulados geométricos, y completo la exposición
+ de Euclides en la teoría de medición de longitudes, áreas y volúmenes.
+ 
+\end_layout
+
+\begin_layout Pause
+
+\end_layout
+
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+Mientras Euclides 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+ establece únicamente relaciones entre longitudes, áreas y volúmenes, mostrando
+ por ejemplo, que las áreas de los círculos son como los cuadrados de los
+ radios, y los volúmenes, de esferas como los cubos de los radios, Arquímedes
+ presenta expresiones que permiten calcular las magnitudes correspondientes.
  Este último introdujo cinco postulados, a fin de fundamentar la geometría
  métrica.
  (Pero no pueden considerarse como postulados, ya que pueden ser demostrados).
@@ -822,7 +850,10 @@ status open
 
 \end_inset
 
- 
+ El minis
+terio de educació
+\lang spanish
+n 
 \begin_inset ERT
 status open
 
@@ -833,800 +864,11 @@ status open
 
 \end_inset
 
-
+dejó
 \end_layout
 
 \begin_layout Subsection
 LINEAMIENTOS CURRICULARES
-\end_layout
-
-\begin_layout BeginFrame
-Extensión 
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-
-\emph on
-N.
- del T.
-\emph default
-: En el título original pone además 
-\begin_inset Quotes eld
-\end_inset
-
-Usar Letras Capitales
-\begin_inset Quotes erd
-\end_inset
-
-.
- Esto es habitual en inglés pero no en español.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Definition
-Un cuerpo 
-\begin_inset Formula $F$
-\end_inset
-
- se dice que es una extensión de un cuerpo 
-\begin_inset Formula $K$
-\end_inset
-
- (o simplemente una extensión de 
-\begin_inset Formula $K$
-\end_inset
-
-) siempre que 
-\begin_inset Formula $K$
-\end_inset
-
- sea un subcuerpo de 
-\begin_inset Formula $F.$
-\end_inset
-
- La notación que se usa habitualmente para designar una extensión es 
-\begin_inset Formula $F:K$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout ExampleBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-Ejemplos
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-\begin_inset Formula $\mathbb{C}:\mathbb{R}$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Enumerate
-\begin_inset Formula $\mathbb{Q}\left(\sqrt[3]{2}\right):\mathbb{Q}$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Enumerate
-\begin_inset Formula $\mathbb{R}(i):\mathbb{R}$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Enumerate
-\begin_inset Formula $\mathbb{R}:\mathbb{\mathbb{Q}}$
-\end_inset
-
-
-\end_layout
-
-\end_deeper
-\begin_layout BeginFrame
-Dimensión
-\end_layout
-
-\begin_layout Definition
-Se dice que una extensión 
-\begin_inset Formula $F:K$
-\end_inset
-
- es finita (infinita) si 
-\begin_inset Formula $F$
-\end_inset
-
- como 
-\color red
-
-\begin_inset Formula $K$
-\end_inset
-
--espacio vectorial
-\color inherit
- es de dimensión finita (infinita).
- A la dimensión de este espacio vectorial se le llama grado de la extensión
- y se denota 
-\begin_inset Formula $\left[F:K\right]$
-\end_inset
-
- .
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout AlertBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-El tomar a 
-\begin_inset Formula $F$
-\end_inset
-
- como un 
-\begin_inset Formula $K$
-\end_inset
-
--espacio vectorial,
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- nos permite utilizar los conceptos y resultados del álgebra lineal en el
- estudio de los extensiones de cuerpos.
-\end_layout
-
-\begin_layout BeginFrame
-Por ejemplo ...
-\end_layout
-
-\begin_layout ExampleBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-Un ejemplo sencillo puede estar dado
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- si tenemos la extensión de cuerpos 
-\begin_inset Formula $\mathbb{C}:\mathbb{R}$
-\end_inset
-
-, el grado de esta extensión es 
-\begin_inset Formula $\left[\mathbb{C}:\mathbb{R}\right]=2$
-\end_inset
-
- porque 
-\begin_inset Formula $\left\{ 1,i\right\} $
-\end_inset
-
- es una base de 
-\begin_inset Formula $\mathbb{C}$
-\end_inset
-
-, como espacio espacio vectorial.
- También tenemos extensiones que no son finitas tales como 
-\begin_inset Formula $\mathbb{R}:\mathbb{\mathbb{Q}}$
-\end_inset
-
-, 
-\begin_inset Formula $\mathbb{C}:\mathbb{Q}$
-\end_inset
-
-, donde el grado de estas extensiones es infinita.
-\end_layout
-
-\begin_layout BeginFrame
-Extensiones algebraicas y trascendentes 
-\end_layout
-
-\begin_layout ColumnsTopAligned
-
-\end_layout
-
-\begin_deeper
-\begin_layout Column
-5.5cm
-\end_layout
-
-\begin_layout Definition
-Sea 
-\begin_inset Formula $F:K$
-\end_inset
-
- una extensión de cuerpos.
- Decimos que un elemento 
-\begin_inset Formula $\alpha\in F$
-\end_inset
-
- es 
-\series bold
-algebraico
-\series default
- sobre 
-\begin_inset Formula $K$
-\end_inset
-
- si existe un polinomio 
-\begin_inset Formula $p\in K\left[x\right],\, p\neq0$
-\end_inset
-
- tal que 
-\begin_inset Formula $p(\alpha)=0$
-\end_inset
-
- .
- En caso contrario, decimos que 
-\begin_inset Formula $\alpha$
-\end_inset
-
- es 
-\series bold
-trascendente
-\series default
-.
- 
-\begin_inset Formula $F$
-\end_inset
-
- se llama 
-\series bold
-extensión algebraica
-\series default
- de 
-\begin_inset Formula $K$
-\end_inset
-
- si cada elemento de 
-\begin_inset Formula $F$
-\end_inset
-
- es algebraico sobre 
-\begin_inset Formula $K$
-\end_inset
-
-.
- 
-\begin_inset Formula $F$
-\end_inset
-
- se llama 
-\series bold
-extensión trascendental
-\series default
- si por lo menos un elemento de 
-\begin_inset Formula $F$
-\end_inset
-
- es trascendental sobre 
-\begin_inset Formula $K$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout Column
-5cm
-\end_layout
-
-\begin_layout ExampleBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-Por ejemplo,
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- 
-\begin_inset Formula $i\in\mathbb{C}$
-\end_inset
-
- es algebraico sobre 
-\begin_inset Formula $\mathbb{R}$
-\end_inset
-
-, pues es solución de 
-\begin_inset Formula $x^{2}+1=0$
-\end_inset
-
-.
- También, 
-\begin_inset Formula $\sqrt{2}\in\mathbb{R}$
-\end_inset
-
- es algebraico sobre 
-\begin_inset Formula $\mathbb{Q}$
-\end_inset
-
- pues es solución de 
-\begin_inset Formula $x^{2}-2=0$
-\end_inset
-
-.
- Por otro lado, es posible demostrar que 
-\begin_inset Formula $\pi,e\in\mathbb{R}$
-\end_inset
-
- son trascendentales sobre 
-\begin_inset Formula $\mathbb{Q}$
-\end_inset
-
-, o sea que no hay una ecuación polinómica con coeficientes en 
-\begin_inset Formula $\mathbb{Q}$
-\end_inset
-
- de la que 
-\begin_inset Formula $\pi$
-\end_inset
-
- o 
-\begin_inset Formula $e$
-\end_inset
-
- sean una raíz.
-\end_layout
-
-\end_deeper
-\begin_layout BeginFrame
-\begin_inset Formula $K\left(S\right)$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Definition
-Sea 
-\begin_inset Formula $F$
-\end_inset
-
- una extensión de 
-\begin_inset Formula $K$
-\end_inset
-
-, y 
-\begin_inset Formula $S\subset F$
-\end_inset
-
- un subconjunto.
- Denotamos 
-\begin_inset Formula $K(S)$
-\end_inset
-
- al menor subcuerpo de 
-\begin_inset Formula $F$
-\end_inset
-
- que contiene a 
-\begin_inset Formula $K$
-\end_inset
-
- y 
-\begin_inset Formula $S$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout ExampleBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-De esta definición podemos tener las extensiones de cuerpos
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- tales como 
-\begin_inset Formula $\mathbb{Q}\left(i\right)\subset\mathbb{C}$
-\end_inset
-
-, donde en este caso 
-\begin_inset Formula $S=\left\{ i\right\} $
-\end_inset
-
- y 
-\begin_inset Formula $\mathbb{R}\left(i\right)=\left\{ a+bi:a,b\in\mathbb{R}\right\} $
-\end_inset
-
- es el menor cuero que contiene a 
-\begin_inset Formula $i$
-\end_inset
-
- y 
-\begin_inset Formula $\mathbb{R}$
-\end_inset
-
-, esta extensión se la llama 
-\shape italic
-extensión simple.
-\end_layout
-
-\begin_layout BeginFrame
-Extensión de una extensión
-\end_layout
-
-\begin_layout ColumnsTopAligned
-
-\end_layout
-
-\begin_deeper
-\begin_layout Column
-5cm
-\end_layout
-
-\begin_layout Theorem
-Sea 
-\begin_inset Formula $F$
-\end_inset
-
- una extensión de 
-\begin_inset Formula $E$
-\end_inset
-
- y 
-\begin_inset Formula $E$
-\end_inset
-
- una extensión de 
-\begin_inset Formula $K$
-\end_inset
-
-.
- Entonces 
-\begin_inset Formula $\left[F:K\right]=\left[F:E\right]\left[E:K\right]$
-\end_inset
-
-.
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\end_deeper
-\begin_layout ColumnsTopAligned
-
-\end_layout
-
-\begin_deeper
-\begin_layout Block
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-La utilidad de este teorema
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- permite calcular el grado de una extensión dada, si se conoce el grado
- de las extensiones intermedias
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\end_deeper
-\begin_layout ColumnsTopAligned
-
-\end_layout
-
-\begin_deeper
-\begin_layout Column
-6cm
-\end_layout
-
-\begin_layout ExampleBlock
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-Por ejemplo,
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-el caso en de las extensiones 
-\begin_inset Formula $\mathbb{Q}\left(\sqrt{2}\right):\mathbb{Q}$
-\end_inset
-
- y 
-\begin_inset Formula $\mathbb{Q}\left(\sqrt{2},i\right):\mathbb{Q}(\sqrt{2)}$
-\end_inset
-
- si se conoce 
-\begin_inset Formula $\left[\mathbb{Q}\left(\sqrt{2}\right):\mathbb{Q}\right]=2$
-\end_inset
-
- y 
-\begin_inset Formula $\left[\mathbb{Q}\left(\sqrt{2},i\right):\mathbb{Q}(\sqrt{2)}\right]=2$
-\end_inset
-
-, se puede calcular 
-\begin_inset Formula $\left[\mathbb{Q}\left(\sqrt{2},i\right):\mathbb{Q}\right]$
-\end_inset
-
-.
- Entonces tenemos por el teorema anterior que 
-\begin_inset Formula $\left[\mathbb{Q}\left(\sqrt{2},i\right):\mathbb{Q}\right]=\left[\mathbb{Q}\left(\sqrt{2},i\right):\mathbb{Q}(\sqrt{2}\right]\left[\mathbb{Q}\left(\sqrt{2}\right):\mathbb{Q}\right]=4$
-\end_inset
-
-.
-\end_layout
-
-\end_deeper
-\begin_layout Subsection
-Aplicación
-\end_layout
-
-\begin_layout BeginFrame
-Problemas Delianos
-\end_layout
-
-\begin_layout Block
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-Con los conocimientos hasta ahora adquiridos sobre extensiones de cuerpos
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
- podemos dar solución a los problemas delianos, que fueron la trisección
- de un ángulo, la duplicación del cubo y a la cuadratura del círculo, todo
- esto utilizando solamente la regla y el compás.
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout Standard
-El paso fundamental para relacionar el álgebra con las construcciones con
- regla y compás es calcular las posibles dimensiones de los cuerpos que
- generan los números construibles:
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout Theorem
-Si un número real 
-\begin_inset Formula $c$
-\end_inset
-
- es construible, entonces 
-\begin_inset Formula $c$
-\end_inset
-
- es algebraico de grado una potencia de 
-\begin_inset Formula $2$
-\end_inset
-
- sobre el cuerpo 
-\begin_inset Formula $\mathbb{Q}$
-\end_inset
-
- de los racionales.
-\end_layout
-
-\begin_layout BeginFrame
-Duplicación del cubo
-\end_layout
-
-\begin_layout Theorem
-Es imposible con regla y compás la construcción para duplicar un cubo de
- longitud de lado 1.
- 
-\end_layout
-
-\begin_layout Theorem
-
-\end_layout
-
-\begin_layout Theorem
-
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout Remark
-Para duplicar el cubo unitario tendríamos que construir 
-\begin_inset Formula $\sqrt[3]{2}$
-\end_inset
-
- a partir de 
-\begin_inset Formula $\mathbb{Q}$
-\end_inset
-
-, pero 
-\begin_inset Formula $\left[\mathbb{Q}(\sqrt[3]{2}):\mathbb{Q}\right]=3$
-\end_inset
-
- que no es potencia de dos, por lo que, no es construible.
-\end_layout
-
-\begin_layout BeginFrame
-Cuadratura del círculo
-\end_layout
-
-\begin_layout Theorem
-Es imposible cuadrar un circulo con construcciones de regla y compás.
- 
-\end_layout
-
-\begin_layout Pause
-
-\end_layout
-
-\begin_layout Remark
-Para construir un cuadrado con misma área que un círculo de diámetro 1,
- tendríamos que construir 
-\begin_inset Formula $\sqrt{\pi}$
-\end_inset
-
-.
- Pero si 
-\begin_inset Formula $\sqrt{\pi}$
-\end_inset
-
- fuera algebraico, también 
-\begin_inset Formula $\pi$
-\end_inset
-
- sería algebraico.
- En efecto, si consideramos 
-\begin_inset Formula $\mathbb{Q}\subset\mathbb{Q}(\pi)\subset\mathbb{Q}(\sqrt{\pi})$
-\end_inset
-
-, entonces la transitividad de grados nos dice 
-\begin_inset Formula $\left[\mathbb{Q}(\sqrt{\pi}):\mathbb{Q}\right]=\left[\mathbb{Q}(\sqrt{\pi}):\mathbb{Q}(\pi)\right]\left[\mathbb{Q}(\pi):\mathbb{Q}\right]$
-\end_inset
-
-.
- Suponiendo el lado izquierdo finito, se tendría 
-\begin_inset Formula $\left[\mathbb{Q}(\pi):\mathbb{Q}\right]<\infty$
-\end_inset
-
-, absurdo.
- 
 \end_layout
 
 \begin_layout Section
