--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -33,7 +33,7 @@
 \colorlet{mystruct}{structure} % Guarda la estructura actual 
 \colorlet{structure}{magenta} % Nueva estructura 
 \usestructuretemplate{\color{structure}}{} 
-\beamertemplateshadingbackground{yellow!50}{blue!50}
+\beamertemplateshadingbackground{black!50}{white!50}
 \end_preamble
 \use_default_options false
 \begin_modules
