--- a/PresNancy0509.lyx
+++ b/PresNancy0509.lyx
@@ -772,6 +772,10 @@ Arquímedes
  
 \end_layout
 
+\begin_layout Subsection
+Cambios de Paradigmas de siglo XIX
+\end_layout
+
 \begin_layout BeginFrame
 Lobachevski y Riemann
 \end_layout
@@ -785,27 +789,74 @@ Lobachevski y Riemann
 5cm
 \end_layout
 
-\end_deeper
-\begin_layout ColumnsTopAligned
-Lobachevski conservando las premisas básicas de Euclides, construye un sistema
- lógico.
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+Lobachevski
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+ conservando las premisas básicas de Euclides, construye un sistema lógico.
  Desarrollando la geometría 'imaginaria' hasta llevarla al mismo nivel en
  que se encontraba la de Euclides.
 \end_layout
 
-\begin_deeper
+\begin_layout Pause
+
+\end_layout
+
 \begin_layout Column
 5cm
 \end_layout
 
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+Riemann
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+ al desarrollar los principios analíticos de la geometría obtuvo, un sistema
+ geométrico que difería tanto del euclidiano como del de Lobachevski.
+\end_layout
+
 \end_deeper
-\begin_layout ColumnsTopAligned
-Riemann al desarrollar los principios analíticos de la geometría obtuvo,
- un sistema geométrico que difería tanto del euclidiano como del de Lobachevski.
+\begin_layout Subsection
+Historia Cercana
 \end_layout
 
 \begin_layout BeginFrame
-Los fundamentos de la Geometría
+Los Fundamentos de la Geometría
 \end_layout
 
 \begin_layout Block
@@ -926,13 +977,46 @@ status open
 
 \end_inset
 
-Con su presentación, propuso un programa con el eslogan ¡Abajo Euclides!.
+Con su presentación, propuso un programa con el eslogan 
+\series bold
+\emph on
+\color red
+¡Abajo Euclides!
+\series default
+\emph default
+\color inherit
+.
  Exponía la critica a la enseñanza de la geometría axiomática iniciada por
  Euclides y seguida por Hilbert.
  
 \end_layout
 
-\begin_layout Block
+\begin_layout BeginFrame
+Matemática Moderna
+\end_layout
+
+\begin_layout AlertBlock
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+ Jeans Dieudonne 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
 
 \lang english
 Propuso cambios que se introdujeron con el nombre de matematica moderna.
@@ -970,17 +1054,55 @@ status open
 \end_inset
 
  Al cabo dos o tres décadas, tenía mas detractores que seguidores.
- 
-\end_layout
-
-\begin_layout Block
-
-\lang english
-Particularmente los educadores terminaron desechando el paradigma de la
+ Particularmente los educadores terminaron desechando el paradigma de la
  Matemática Moderna acusandola en algún caso de impracticable.
  Sin embargo, la existencia de la corriente denominada Matemática moderna
- condujo a un desplazamiento de la Geometría Sintética de los contenidos
- curriculares de los distintos niveles educativos.
+ condujo a un 
+\color red
+desplazamiento
+\color inherit
+ de la Geometría Sintética de los contenidos curriculares de los distintos
+ niveles educativos.
+\end_layout
+
+\begin_layout BeginFrame
+
+\lang english
+Nuestra Conjetura
+\end_layout
+
+\begin_layout AlertBlock
+
+\lang english
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+La historia reciente 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+ha significado una pulverización de la enseñanza y el aprendizaje de la
+ geometría sintética, creando varias generaciones sin instrucción en geometría.
+\end_layout
+
+\begin_layout Section
+
+\lang english
+Los documentos Formales
 \end_layout
 
 \begin_layout BeginFrame
@@ -998,7 +1120,7 @@ status open
 
 \end_inset
 
- El ministerio de educación 
+ El Ministerio de Educación 
 \begin_inset ERT
 status open
 
@@ -1021,23 +1143,72 @@ status open
 5cm
 \end_layout
 
-\begin_layout Standard
-El estudio de las propiedades de las figuras y de los cuerpos geométricos.
+\begin_layout ExampleBlock
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
+El estudio de las propiedades 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+de las figuras y de los cuerpos geométricos.
  Involucra conocer cada vez con mayor profundidad, sus propiedades y poder
  tenerlas disponibles para resolver diversos tipos de problemas geométricos.
+\end_layout
+
+\begin_layout Pause
+
 \end_layout
 
 \begin_layout Column
 5cm
 \end_layout
 
-\begin_layout Standard
+\begin_layout ExampleBlock
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{
+\end_layout
+
+\end_inset
+
 Inicio de un modo de pensar propio del saber geométrico.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
  El ' pensar geométrico ' significa apoyarse en propiedades estudiadas a
  fin anticipar relaciones no conocidas.
 \end_layout
 
 \end_deeper
+\begin_layout Section
+Lo que estamos haciendo
+\end_layout
+
 \begin_layout BeginFrame
 Lo que se esta Trabajando
 \end_layout
@@ -1068,49 +1239,138 @@ status open
  las aulas.
 \end_layout
 
+\begin_layout BeginFrame
+Encuesta
+\end_layout
+
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<1->
+\end_layout
+
+\end_inset
+
 Nombre del colegio o escuela:
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<2->
+\end_layout
+
+\end_inset
+
 ¿A qué nivel pertenece? 
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<3->
+\end_layout
+
+\end_inset
+
 ¿En qué año desarrolla sus actividades? 
 \end_layout
 
 \begin_layout Enumerate
-En su/s programa/s ¿Qué temas de geometría contempla? Por ejemplo: obtención
- de lugares geométricos, construcciones con regla y compás, y utilización
- de software.
- Si es ninguno ¿por qué?.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<4->
+\end_layout
+
+\end_inset
+
+En su/s programa/s ¿Qué temas de geometría contempla? 
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<5->
+\end_layout
+
+\end_inset
+
 Indique un bosquejo de cronograma de estos temas.
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<6->
+\end_layout
+
+\end_inset
+
 ¿Usa criterios para la selección de los contenidos de geometría que desarrolla?
- Por ejemplo: directivas de la institución, continuación de o los temas
- del año anterior, características sociales del medio, etc.
  
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<7->
+\end_layout
+
+\end_inset
+
 Con respecto al tiempo destinado
 \color black
  ¿Piensa que es suficiente? ¿Piensa que es poco? ¿Por qué?
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<8->
+\end_layout
+
+\end_inset
+
 ¿Considera que se ha perdido la enseñanza de la geometría sintética? 
 \color black
 ¿Por qué?
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<9->
+\end_layout
+
+\end_inset
+
 ¿
 \color black
 Asistió a cursos de capacitación de Geometría
@@ -1119,6 +1379,16 @@ Asistió a cursos de capacitación de Geometría
 \end_layout
 
 \begin_layout Enumerate
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+<10>
+\end_layout
+
+\end_inset
+
 Algún comentario referente.
 \end_layout
 
