--- a/PresNancy0509_1.lyx
+++ b/PresNancy0509_1.lyx
@@ -734,6 +734,13 @@ status open
  Su obra los ' Elementos ' estaba dividida en trece capítulos.
  Contienen el material correspondiente a la geometría elemental propiamente
  dicha.
+\begin_inset CommandInset citation
+LatexCommand cite
+key "efimov1984geometría"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Pause
@@ -916,6 +923,13 @@ status open
  Euclides fueron el indiscutible libro de texto de las escuelas para la
  enseñanza de las matemáticas.
  
+\begin_inset CommandInset citation
+LatexCommand cite
+key "santaló1966matemática"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout BeginFrame
@@ -955,6 +969,13 @@ Nicolas Bourbaki
 \color inherit
 , el cual estaba a favor de una reforma mas profunda.
  
+\begin_inset CommandInset citation
+LatexCommand cite
+key "santaló1966matemática"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Pause
@@ -1137,7 +1158,14 @@ status open
 
 \end_inset
 
- El estudio de la Geometría, tiene dos grandes objetivos
+ El estudio de la Geometría, tiene dos grandes objetivos 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "salta2011disenioscurriculares"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout ColumnsTopAligned
@@ -1403,56 +1431,15 @@ Algún comentario referente.
 Bibliografía
 \end_layout
 
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Ef"
-key "Efimov-1"
+\begin_layout Standard
+\begin_inset CommandInset bibtex
+LatexCommand bibtex
+bibfiles "seminario/thesisExample"
+options "apalike"
 
 \end_inset
 
-Efimov, N.
- V.
- Geometría Superior.
- Editorial Mir Moscu.
-\end_layout
 
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Hist"
-key "Boyer"
-
-\end_inset
-
- Boyer, Carl B.
- Historia de la Matemática.
- Editorial Alianza.
-\end_layout
-
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "San"
-key "Luis A.Santaló"
-
-\end_inset
-
- Santaló, Luis A.
- La Matemática en la Escuela Secundaria.
- Editorial Universitaria de Buenos Aires (1966).
-\end_layout
-
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Mi"
-key "Ministerio de Educación"
-
-\end_inset
-
- Ministerio de Educación.
- Lineamientos Curriculares
 \end_layout
 
 \begin_layout EndFrame
