--- a/PresNancy0509_2.lyx
+++ b/PresNancy0509_2.lyx
@@ -33,7 +33,7 @@
 \colorlet{mystruct}{structure} % Guarda la estructura actual 
 \colorlet{structure}{magenta} % Nueva estructura 
 \usestructuretemplate{\color{structure}}{} 
-\beamertemplateshadingbackground{black!50}{white!50}
+\beamertemplateshadingbackground{green!50}{white!50}
 \end_preamble
 \use_default_options false
 \begin_modules
@@ -155,10 +155,10 @@ status open
 \begin_layout Plain Layout
 Geometría Sintética
 \begin_inset Note Note
-status collapsed
+status open
 
 \begin_layout Plain Layout
-optional, use only with long paper titles
+opcional, sólo para títulos largos
 \end_layout
 
 \end_inset
@@ -169,10 +169,14 @@ optional, use only with long paper titles
 \end_inset
 
 
+\end_layout
+
+\begin_layout Subtitle
+Análisis y Propuestas
 \end_layout
 
 \begin_layout Author
-Alumna: Nancy Vilte
+Nancy Vilte
 \begin_inset Flex InstituteMark
 status open
 
@@ -195,7 +199,6 @@ and
 
 \end_inset
 
- Director: Prof.
  Antonio Sangari
 \begin_inset Flex InstituteMark
 status collapsed
@@ -209,70 +212,6 @@ status collapsed
 
 \begin_inset Note Note
 status collapsed
-
-\begin_layout Itemize
-Give the names in the same order as the appear in the paper.
- 
-\end_layout
-
-\begin_layout Itemize
-Use the 
-\begin_inset Quotes eld
-\end_inset
-
-Institute mark
-\begin_inset Quotes erd
-\end_inset
-
- inset (
-\family sans
-Insert\SpecialChar \menuseparator
-Custom Insets\SpecialChar \menuseparator
-InstituteMark
-\family default
-) only if the authors have different affiliations.
-\end_layout
-
-\end_inset
-
-
-\begin_inset Argument
-status open
-
-\begin_layout Plain Layout
-Nancy, Antonio
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-- optional, use only with lots of authors
-\end_layout
-
-\begin_layout Plain Layout
-- if there are really lots of authors, use 
-\begin_inset Quotes eld
-\end_inset
-
-Author et al.
-\begin_inset Quotes erd
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Author
-\begin_inset Note Note
-status open
 
 \begin_layout Plain Layout
 - Componer los nombres en el mismo orden en que aparecen en el artículo.
@@ -298,7 +237,7 @@ status open
 \begin_layout Plain Layout
 Nancy, Antonio
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 - opcional, usar sólo con varios autores
@@ -336,7 +275,8 @@ status collapsed
 
 \end_inset
 
-Departamento de Matemática
+Dpto de Matemática, Fac.
+ Ciencias Exactas
 \begin_inset Newline newline
 \end_inset
 
@@ -363,13 +303,14 @@ status collapsed
 
 \end_inset
 
-Departamento de Matemática
+Dpto de Matemática, Fac.
+ Ciencias Exactas
 \begin_inset Newline newline
 \end_inset
 
 Universidad Nacional de Salta
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 - Usar el comando 
@@ -407,7 +348,7 @@ opcional, aunque generalmente necesario
 \end_layout
 
 \begin_layout Date
-Seminario del Profesorado, 2012
+Seminario del Profesorado en Matemática, 2012
 \begin_inset Note Note
 status collapsed
 
@@ -734,6 +675,13 @@ status open
  Su obra los ' Elementos ' estaba dividida en trece capítulos.
  Contienen el material correspondiente a la geometría elemental propiamente
  dicha.
+\begin_inset CommandInset citation
+LatexCommand cite
+key "efimov1984geometría"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Pause
@@ -916,6 +864,13 @@ status open
  Euclides fueron el indiscutible libro de texto de las escuelas para la
  enseñanza de las matemáticas.
  
+\begin_inset CommandInset citation
+LatexCommand cite
+key "santaló1966matemática"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout BeginFrame
@@ -955,6 +910,13 @@ Nicolas Bourbaki
 \color inherit
 , el cual estaba a favor de una reforma mas profunda.
  
+\begin_inset CommandInset citation
+LatexCommand cite
+key "santaló1966matemática"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Pause
@@ -1137,7 +1099,14 @@ status open
 
 \end_inset
 
- El estudio de la Geometría, tiene dos grandes objetivos
+ El estudio de la Geometría, tiene dos grandes objetivos 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "salta2011disenioscurriculares"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout ColumnsTopAligned
@@ -1403,56 +1372,15 @@ Algún comentario referente.
 Bibliografía
 \end_layout
 
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Ef"
-key "Efimov-1"
+\begin_layout Standard
+\begin_inset CommandInset bibtex
+LatexCommand bibtex
+bibfiles "seminario/thesisExample"
+options "apalike"
 
 \end_inset
 
-Efimov, N.
- V.
- Geometría Superior.
- Editorial Mir Moscu.
-\end_layout
 
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Hist"
-key "Boyer"
-
-\end_inset
-
- Boyer, Carl B.
- Historia de la Matemática.
- Editorial Alianza.
-\end_layout
-
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "San"
-key "Luis A.Santaló"
-
-\end_inset
-
- Santaló, Luis A.
- La Matemática en la Escuela Secundaria.
- Editorial Universitaria de Buenos Aires (1966).
-\end_layout
-
-\begin_layout Bibliography
-\begin_inset CommandInset bibitem
-LatexCommand bibitem
-label "Mi"
-key "Ministerio de Educación"
-
-\end_inset
-
- Ministerio de Educación.
- Lineamientos Curriculares
 \end_layout
 
 \begin_layout EndFrame
